objects/CMPL123QMS__Supplier_Site__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__External_Workflow_Action_Performed_By__c</fullName>
        <label>External Workflow Action Performed By</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__External_Workflow_Action_Performed_On__c</fullName>
        <label>External Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Integration_ID__c</fullName>
        <label>Integration ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Material_Risk_Flag__c</fullName>
        <formula>IF(ISPICKVAL(CMPL123QMS__Overall_Material_Risk__c , 'High'),IMAGE("/img/func_icons/util/alert16.gif", "warning", 16, 16), "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A warning flag indicates a high Material Risk is associated with this Supplier Site.</inlineHelpText>
        <label>Material Risk Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__MessageID__c</fullName>
        <externalId>true</externalId>
        <label>Message ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Overall_Material_Risk_Details__c</fullName>
        <label>Overall Material Risk Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Overall_Material_Risk__c</fullName>
        <label>Overall Material Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Parent_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(Parent) Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123QMS__Vendor__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123QMS__Vendor__c</referenceTo>
        <relationshipLabel>Supplier Sites</relationshipLabel>
        <relationshipName>Supplier_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supplier Site</label>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Parent_Supplier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supplier Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Sites</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Prevent_Editing_Name_Field_Internal</fullName>
        <active>true</active>
        <description>Internal Vendor Users should not be able to edit name field</description>
        <errorConditionFormula>OR( 
AND( 
ISCHANGED( Name ), 
(CONTAINS($Profile.Name, "Salesforce Platform User for Vendors"))) 
)</errorConditionFormula>
        <errorMessage>Cannot Edit Name field</errorMessage>
    </validationRules>
</CustomObject>